# PII_Redactor_tool

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirement.txt
src/: anonymizer.py  detector.py  docx_processor.py  evaluate.py  pdf_processor.py  regex_patterns.py  utils.py
tests/: test_anonymizer.py  test_detector.py  test_docx.py  test_evaluator.py
