[project]
name = "pii-redactor-tool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faker>=40.31.0",
    "gradio>=6.20.0",
    "presidio-analyzer>=2.2.363",
    "presidio-anonymizer>=2.2.363",
    "pymupdf>=1.28.0",
    "python-docx>=1.2.0",
    "regex>=2026.7.10",
    "spacy>=3.8.13",
]
